--- a/frontend/drone-query/src/app/user-input/user-input.component.html
+++ b/frontend/drone-query/src/app/user-input/user-input.component.html
@@ -1,13 +1,40 @@
 <mat-card class="input-card">
-    <mat-card-content>
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Your Query</mat-label>
-        <input matInput [(ngModel)]="userInput" placeholder="Type your message here..." />
-      </mat-form-field>
-  
-      <button mat-raised-button color="primary" (click)="submitQuery()" class="submit-button">
-        Send
-      </button>
-    </mat-card-content>
-  </mat-card>
-  
+  <mat-card-content>
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Your Query</mat-label>
+      <input matInput [(ngModel)]="userInput" placeholder="Type your message here..." />
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" (click)="submitQuery()" class="submit-button">
+      Send
+    </button>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="response-card" *ngIf="responseData.length">
+  <mat-card-title>AI Response</mat-card-title>
+  <mat-card-content>
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Filter</mat-label>
+      <input matInput [(ngModel)]="filterCriteria" (ngModelChange)="filterData()" placeholder="Filter data..." />
+    </mat-form-field>
+
+    <table mat-table [dataSource]="filteredData">
+      <!-- Define your columns here based on your data structure -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="altitude">
+        <th mat-header-cell *matHeaderCellDef> Altitude </th>
+        <td mat-cell *matCellDef="let element"> {{element.altitude}} </td>
+      </ng-container>
+
+      <!-- Add other columns as necessary -->
+
+      <tr mat-header-row *matHeaderRowDef="['name', 'altitude']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['name', 'altitude'];"></tr>
+    </table>
+  </mat-card-content>
+</mat-card>
